feat(home): basic style

--- a/bogobogo-frontend/src/components/Header.less
+++ b/bogobogo-frontend/src/components/Header.less
@@ -1,9 +1,8 @@
 .Header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: absolute;
+    z-index: 100;
+    right: 0;
     padding: 10px 20px;
-    background: #fff;
   
     nav button {
       margin: 0 10px;
@@ -13,12 +12,58 @@
       font-size: 1rem;
     }
   
-    .language-switcher button {
-      margin-left: 10px;
-      background: none;
-      border: none;
-      cursor: pointer;
-      font-size: 1rem;
+    .language-switcher {
+      display: inline-block;
+      button {
+        color: #fff;
+        margin-left: 10px;
+        background: none;
+        border: none;
+        cursor: pointer;
+        font-size: 0.8rem;
+        line-height: 1rem;
+        opacity: 0.75;
+        transition: all 0.2s;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+
+    .links {
+      display: inline-block;
+      span {
+        position: relative;
+        margin-left: 10px;
+        font-size: 1rem;
+        color: #fff;
+        opacity: 0.75;
+        transition: all 0.2s;
+        
+        &:hover {
+          opacity: 1;
+        }
+        
+        .qrcode {
+          position: absolute;
+          top: 100%;
+          right: 0;
+          transform: translateY(0.5rem);
+          width: 130px;
+          height: 130px;
+          background: white;
+
+          &:before {
+            content: "";
+            position: absolute;
+            top: -15px;
+            right: 2px;
+            border-width: 10px;
+            border-style: solid;
+            border-color: transparent transparent white transparent;
+          }
+        }
+      }
     }
   }
   
