--- a/bogobogo-frontend/src/App.less
+++ b/bogobogo-frontend/src/App.less
@@ -1,11 +1,10 @@
 .App {
-    display: flex;
-    flex-direction: column;
+    position: relative;
     height: 100vh;
+    min-height: 500px;
   
     .main-content {
-      flex: 1;
-      overflow-y: auto;
+      height: 100%;
     }
 }
   
