--- a/bogobogo-frontend/src/components/Footer.less
+++ b/bogobogo-frontend/src/components/Footer.less
@@ -1,6 +1,16 @@
 .Footer {
-    padding: 10px 20px;
-    background: #f1f1f1;
-    text-align: center;
+  position: absolute;
+  z-index: 100;
+  bottom: 0;
+  right: 0;
+  padding: 10px 20px;
+  color: #666;
+  text-align: right;
+  font-family: "EB Garamond", serif;
+  p {
+    margin: 0;
+    font-size: 0.8rem;
+    line-height: 20px;
   }
+}
   
