feat(home): responsive, chinese & background tracking

--- a/bogobogo-frontend/src/components/Footer.less
+++ b/bogobogo-frontend/src/components/Footer.less
@@ -11,6 +11,10 @@
     margin: 0;
     font-size: 0.8rem;
     line-height: 20px;
+
+    @media (max-width: 480px) {
+      font-size: 0.8rem;
+    }
   }
 }
   
