--- a/bogobogo-frontend/src/components/Footer.less
+++ b/bogobogo-frontend/src/components/Footer.less
@@ -4,7 +4,7 @@
   bottom: 0;
   right: 0;
   padding: 10px 20px;
-  color: #666;
+  color: #ddd;
   text-align: right;
   font-family: "EB Garamond", serif;
   p {
