--- a/bogobogo-frontend/src/components/HomePage.less
+++ b/bogobogo-frontend/src/components/HomePage.less
@@ -26,7 +26,7 @@
   .bg {
     width: 100%;
     height: 100%;
-    background: url('../assets/bg-1.jpg') no-repeat center center/cover;
+    background: white no-repeat center center/cover;
     scale: 1.05;
   }
 
@@ -109,6 +109,7 @@
       font-family: var(--secondary-font);
       font-size: 1.8rem;
       line-height: 2rem;
+      padding-right: 5px;
       color: #333;
       background: linear-gradient(to bottom, transparent 40%, #fff 40%, #fff 80%, transparent 80%);
       background-repeat: no-repeat;
@@ -118,7 +119,7 @@
     
       @media (max-width: 480px) {
         font-size: 1.2rem;
-        line-height: 1.5rem;
+        line-height: 1.8rem;
       }
 
       .highlight {
@@ -178,7 +179,7 @@
       }
 
       button {
-        font-family: 'EB Garamond', serif;
+        font-family: var(--primary-font);
         margin: 0 20px 0 0;
         padding: 0;
         background: none;
