--- a/bogobogo-frontend/src/components/Skillset.less
+++ b/bogobogo-frontend/src/components/Skillset.less
@@ -1,7 +1,54 @@
 @import "../global.less";
 
 .skillset {
-  
     color: #333;
     margin-right: 5px;
+
+    h2 {
+        font-size: 1.5rem;
+        line-height: 2rem;
+        margin: 20px 0 10px;
+
+        @media (max-width: 768px) {
+            font-size: 1.3rem;
+            line-height: 1.3rem;
+        }
+    }
+
+    .skillCtn {
+        width: 100%;
+        
+        .progress-bar {
+            width: 100%;
+            height: 32px;
+            background-color: #ddd;
+            margin-bottom: 10px;
+            position: relative;
+            font-size: 1rem;
+
+            @media (max-width: 768px) {
+                height: 20px;
+                font-size: 0.8rem;
+            }
+
+            .progress-bar-fill {
+                height: 100%;
+                position: relative;
+            }
+            
+            .skill-name {
+                position: absolute;
+                top: 0;
+                width: 100%;
+                line-height: 32px;
+                text-align: center;
+                color: #666;
+
+                @media (max-width: 768px) {
+                    line-height: 20px;
+                }
+            }
+        }
+    }
+      
 }
