feat(projects): done

--- a/bogobogo-frontend/src/components/Header.less
+++ b/bogobogo-frontend/src/components/Header.less
@@ -20,15 +20,18 @@
   
     .language-switcher {
       display: inline-block;
+      margin-left: 10px;
 
       @media (max-width: 768px) {
         display: block;
         margin-bottom: 10px;
+        margin-left: 0;
+        width: 40px;
+        text-align: center;
       }
 
       button {
         color: #fff;
-        margin-left: 10px;
         background: none;
         border: none;
         cursor: pointer;
@@ -56,6 +59,9 @@
         @media (max-width: 768px) {
           display: block;
           margin-bottom: 10px;
+          margin-left: 0;
+          width: 40px;
+          text-align: center;
         }
         
         &:hover {
