--- a/bogobogo-frontend/src/components/Gallery.less
+++ b/bogobogo-frontend/src/components/Gallery.less
@@ -40,7 +40,7 @@
                 margin-bottom: 10px;
             }
 
-            .bg {
+            .itemBg {
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -62,6 +62,17 @@
                     opacity: 0.8;
                 }
             }
+
+            .count {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                background-color: rgba(0, 0, 0, 0.5);
+                color: white;
+                padding: 5px;
+                font-size: 0.8rem;
+                border-radius: 5px;
+            }
         
             .title {
                 position: absolute;
@@ -77,7 +88,7 @@
                 white-space: nowrap;
                 font-size: 1.2rem;
                 @media (max-width: 768px) {
-                    font-size: 1rem;
+                    // font-size: 1rem;
                     padding: 5px;
                 }
             }
