--- a/bogobogo-frontend/src/components/HomePage.less
+++ b/bogobogo-frontend/src/components/HomePage.less
@@ -85,6 +85,7 @@
     height: 100%;
     background: white no-repeat center center/cover;
     scale: 1.05;
+    transition: all 0.2s ease-out;
   }
 
   .homeContent {
