--- a/bogobogo-frontend/src/components/Header.less
+++ b/bogobogo-frontend/src/components/Header.less
@@ -39,6 +39,7 @@
         line-height: 1rem;
         opacity: 0.75;
         transition: all 0.2s;
+        padding: 0;
         &:hover {
           opacity: 1;
         }
