--- a/bogobogo-frontend/src/components/HomePage.less
+++ b/bogobogo-frontend/src/components/HomePage.less
@@ -24,7 +24,7 @@
     opacity: 0.75;
     transition: all 0.2s ease-in-out;
     text-decoration: none;
-    text-shadow: 1px 1px 0 #fff;
+    text-shadow: 2px 0 0 #fff;
     
     @media (max-width: 480px) {
       font-size: 1rem;
