--- a/bogobogo-frontend/src/components/Projects.less
+++ b/bogobogo-frontend/src/components/Projects.less
@@ -3,6 +3,7 @@
 .projects {
     color: #333;
     margin-right: 5px;
+    position: relative;
 
     h2 {
         font-size: 2.5rem;
@@ -43,13 +44,15 @@
 
             &:hover {
               .itemBg {
-                transform: scale(1.1);
+                // transform: scale(1.1);
                 opacity: 0.8;
               }
             }
 
             .sliderCtn {
               width: 50%;
+              border: 5px solid #eee;
+              border-radius: 5px;
               @media (max-width: 768px) {
                 width: 100%;
               }
@@ -67,6 +70,12 @@
                 padding-bottom: 66.67%;
               }
 
+              &:hover {
+                .zoom {
+                  opacity: 1;
+                }
+              }
+
               .itemBg {
                   position: absolute;
                   top: 0;
@@ -79,6 +88,24 @@
                   background-repeat: no-repeat;
                   transition: all 0.3s;
   
+              }
+
+              .zoom {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.5);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                opacity: 0;
+                transition: all 0.3s;
+                cursor: pointer;
+                font-size: 2rem;
+                color: #fff;
+
               }
             }
 
@@ -149,5 +176,80 @@
         
         }
     }
+
+    .zoomedCarouselBackdrop {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 200;
+
+      .slideCtn {
+        // height: 50%;
+
+        .imageCtn {
+          height: 50vh;
+          display: flex;
+          align-items: center;
+
+          img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+          }
+        }
+
+        .carousel {
+          .thumbs {
+            padding-left: 0;
+            white-space: unset;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            flex-wrap: wrap;
+            justify-content: center;
+          }
+
+          .thumb {
+            border: 3px solid #444;
+            border-radius: 5px;
+            margin-bottom: 6px;
+  
+            &.selected {
+              border: 3px solid #ddd;
+            }
+          }
+        }
+      }
+
+      .closeButton {
+        position: absolute;
+        background-color: transparent;
+        top: 10px;
+        right: 10px;
+        color: #fff;
+        font-size: 2rem;
+        opacity: 0.5;
+        cursor: pointer;
+        transition: all 0.3s;
+        border: none;
+        margin: 0;
+        padding: 0;
+
+        @media (max-width: 480px) {
+          font-size: 1.5rem;
+        }
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+    
 
 }
